--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,7 +1,39 @@
-
+:root {
+    --vermelho: #e50914;
+    --preto: #141414;
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body{
+  background: var(--preto);
+  font-family: 'Times New Roman', Times, serif;
+}
+
+header .container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+header .logo{
+  margin: 5px;
+  color: var(--vermelho);
+  font-family: 'Arial Black', times;
+  font-size: 40px;
+}
+
+header nav a {
+  text-decoration: none;
+  color: #aaa;
+  margin-right: 10px;
+}
+
+header nav a:hover{
+  color: #fff;
 }
