--- a/Styles/style.css
+++ b/Styles/style.css
@@ -14,6 +14,33 @@ body{
   font-family: 'Times New Roman', Times, serif;
 }
 
+.filme-principal{
+  font-size: 16px;
+  background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)50%), url('../IMG/capa.jpg');
+ 
+  height: 400px;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.filme-principal .descricao{
+  margin-bottom: 40px;
+}
+
+.titulo{
+  color: #fff;
+  font-size: 70px;
+
+}
+
+.descricao{
+  color: #fff;
+}
+
 header .container {
   display: flex;
   align-items: center;
