--- a/Styles/style.css
+++ b/Styles/style.css
@@ -14,6 +14,30 @@ body{
   font-family: 'Times New Roman', Times, serif;
 }
 
+header .container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+header .logo{
+  margin: 5px;
+  color: var(--vermelho);
+  font-family: 'Arial Black', times;
+  font-size: 40px;
+}
+
+header nav a {
+  text-decoration: none;
+  color: #aaa;
+  margin-right: 10px;
+}
+
+header nav a:hover{
+  color: #fff;
+}
+
 .filme-principal{
   font-size: 16px;
   background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)50%), url('../IMG/capa.jpg');
@@ -37,30 +61,34 @@ body{
 
 }
 
+.filme-principal .titulo{
+  margin-top: 15px;
+  font-size: 40px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .descricao{
   color: #fff;
 }
 
-header .container {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
+.botao {
+  background-color: black;
+  border: none;
+  color: white;
+
+  padding: 15px 30px;
+  margin-right: 15px;
+  font-size: 15px;
+
+  cursor: pointer;
+  transition: .3s ease all;
 }
 
-header .logo{
-  margin: 5px;
-  color: var(--vermelho);
-  font-family: 'Arial Black', times;
-  font-size: 40px;
+.botao:hover{
+  background-color: #fff;
+  color: #141414;
 }
 
-header nav a {
-  text-decoration: none;
-  color: #aaa;
+.botao i{
   margin-right: 10px;
-}
-
-header nav a:hover{
-  color: #fff;
 }
