--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,8 @@
 :root {
-    --vermelho: #e50914;
-    --preto: #141414;
+  --vermelho: #e50914;
+  --preto: #141414;
+  --branco: #fff;
+  --cinza: #d2d2d2;
 }
 
 * {
@@ -9,9 +11,9 @@
   box-sizing: border-box;
 }
 
-body{
+body {
   background: var(--preto);
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header .container {
@@ -21,27 +23,27 @@ header .container {
   justify-content: space-between;
 }
 
-header .logo{
+header .logo {
   margin: 5px;
   color: var(--vermelho);
-  font-family: 'Arial Black', times;
+  font-family: 'Arial Black', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 40px;
 }
 
 header nav a {
   text-decoration: none;
-  color: #aaa;
+  color: var(--cinza);
   margin-right: 10px;
 }
 
-header nav a:hover{
-  color: #fff;
+header nav a:hover {
+  color: var(--branco);
 }
 
-.filme-principal{
+.filme-principal {
   font-size: 16px;
-  background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)50%), url('../IMG/capa.jpg');
- 
+  background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)50%), url('../IMG/capa.jpg');
+
   height: 600px;
   background-size: cover;
 
@@ -51,38 +53,33 @@ header nav a:hover{
   align-items: flex-start;
 }
 
-.filme-principal .descricao{
+.filme-principal .descricao {
   margin-bottom: 40px;
 }
 
-.filme-principal .container{
+.filme-principal .container {
   width: 70%;
 }
 
-.container{
+.container {
   margin-left: 30px;
 }
 
-.titulo{
-  color: #fff;
-  font-size: 70px;
-
-}
-
-.filme-principal .titulo{
+.filme-principal .titulo {
   margin-top: 15px;
+  color: var(--branco);
   font-size: 40px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.descricao{
-  color: #fff;
+.descricao {
+  color: var(--branco);
 }
 
 .botao {
-  background-color: black;
+  background-color: var(--preto);
   border: none;
-  color: white;
+  color: var(--branco);
 
   padding: 15px 30px;
   margin-right: 15px;
@@ -92,17 +89,21 @@ header nav a:hover{
   transition: .3s ease all;
 }
 
-.botao:hover{
-  background-color: #fff;
-  color: #141414;
+.botao:hover {
+  background-color: var(--branco);
+  color: var(--preto);
 }
 
-.botao i{
+.botao i {
   margin-right: 10px;
 }
 
-.box{
+.box {
   height: 100%;
   width: 100%;
   display: block;
+}
+
+.carrosel-filmes {
+  margin-top: 15px;
 }
